Fix the carousel's z-index

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -156,7 +156,7 @@ body {
 }
 
 .carousel-indicators-extension {
-    z-index: 9999;
+    z-index: 9000;
 }
 
 .carousel-text-box-1 {
